project/service.yml
apiVersion: v1
kind: Service

metadata: 
  name: note-service 
  namespace: notes

spec:
  type: LoadBalancer
  selector:   
    app: notes
  ports:
  - port: 80
    targetPort: 5000
